cmake_minimum_required(VERSION 2.8)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./build/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ./build/lib)
set(CMAKE_SRC_DIRECTORY ./)
option(PSYCHE_BUILD_EXAMPLES "Build psyche examples" OFF)
add_definitions(-std=c++17)
add_subdirectory(./psyche)
IF(PSYCHE_BUILD_EXAMPLES)
add_subdirectory(./example/echo)
endif()