cmake_minimum_required(VERSION 3.0)
project(psyche)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/lib)
option(PSYCHE_BUILD_EXAMPLES "Build psyche examples" OFF)
add_definitions(-std=c++17)
add_subdirectory(./psyche)
IF(PSYCHE_BUILD_EXAMPLES)
add_subdirectory(./example/echo)
endif()
